build soir après réu

--- a/foodAgri/src/app/ration/ration.component.html
+++ b/foodAgri/src/app/ration/ration.component.html
@@ -3,68 +3,76 @@
     <form #rationForm="ngForm" (ngSubmit)="onSubmit(rationForm.value)">
       <div class="card-body">
         <h3>Nombre de rations</h3>
-        <button type="button" (click)="getOperation('+',1,'rations')" class="operator" value="ration">+</button>
+        <button type="button" type = "submit" (click)="getOperation('-',1,'rations')" class="operator" value="ration">-</button>
         <input type="text" name="rations" placeholder="rations" [ngModel]="rations" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-        <button type="button" (click)="getOperation('-',1,'rations')" class="operator" value="ration">-</button>
+        <button type="button"  type = "submit" (click)="getOperation('+',1,'rations')" class="operator" value="ration">+</button>
       <input type = "submit" value = "Calculer" (click)="modifier()">
       </div>
       <div class="card-body">
         <label><h4>blé</h4></label>
-        <button type="button" (click)="getOperation('+',1,'ble')" class="operator" value="ble">+</button>
-        <input type="text" name="ble" placeholder="blé" [(ngModel)]="ble" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
         <button type="button" (click)="getOperation('-',1,'ble')" class="operator" value="ble">-</button>
-        <input size="3" type="text" name="blexRation" [(ngModel)]="blerxRation" >
+        <input type="text" name="ble" placeholder="blé" [(ngModel)]="ble" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <button type="button" (click)="getOperation('+',1,'ble')" class="operator" value="ble">+</button>
+        <h4>{{blerxRation}}</h4>
+        <!-- <input size="3" type="text" name="blexRation" [(ngModel)]="blerxRation" > -->
         kg
       </div>
+      <div class="card-body">
+        <h4>pelles de minéraux</h4>
+          <input size="1" type="text" name="mineraux" placeholder="mineraux" [ngModel]="mineraux" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+          <!-- <input size="1" type="text" name="minerauxxRation" [ngModel]="minerauxxRation" > -->
+        </div>
+        <div class="card-body">
+        <h4>sac de calcium</h4>
+          <input size="1" type="text" name="calcium" placeholder="calcium" [ngModel]="calcium" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <!-- <input size="1" type="text" name="calciumxRation" [ngModel]="calciumxRation" > -->
+        </div>
+        <div class="card-body">
+        <h4>sac de sel</h4>
+          <input size="1" type="text" name="sel" placeholder="sel" [ngModel]="sel" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <!-- <input size="1" type="text" name="selxRation" [ngModel]="selxRation" > -->
+        </div>
+        <div class="card-body">
+        <h4>pelles d'urée</h4>
+          <input size="1" type="text" name="urée" placeholder="urée" [ngModel]="uree" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
 
       <div class="card-body">
         <label><h4>Colza</h4></label>
-        <button type="button" (click)="getOperation('+',1,'colza')" class="operator" value="+">+</button>
-        <input type="text" name="colza" placeholder="colza" [ngModel]="colza" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
         <button type="button" (click)="getOperation('-',1,'colza')" class="operator" value="-">-</button>
-      <input size="3" type="text" name="colzaxRation" [ngModel]="colzaxRation" >
+        <input type="text" name="colza" placeholder="colza" [ngModel]="colza" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <button type="button" (click)="getOperation('+',1,'colza')" class="operator" value="+">+</button>
+      <!-- <input size="3" type="text" name="colzaxRation" [ngModel]="colzaxRation" > -->
+      <h4>{{colzaxRation}}</h4>
+      kg
+      </div>
+      <div class="card-body">
+        <label><h4>Soja</h4></label>
+        <button type="button" (click)="getOperation('-',1,'soja')" class="operator" value="-">-</button>
+        <input type="text" name="soja" placeholder="soja" [ngModel]="soja" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <button type="button" (click)="getOperation('+',1,'soja')" class="operator" value="+">+</button>
+      <!-- <input size="3" type="text" name="sojaxRation" [ngModel]="sojaxRation" > -->
+      <h4>{{sojaxRation}}</h4>
       kg
       </div>
 
       <div class="card-body">
-        <label><h4>Paille</h4></label>
-        <button type="button" (click)="getOperation('+',1,'paille')" class="operator" value="+">+</button>
-        <input type="text" name="paille" placeholder="paille" [ngModel]="paille" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-        <button type="button" (click)="getOperation('-',1,'paille')" class="operator" value="-">-</button>
-      <input size="3" type="text" name="paillexRation" [ngModel]="paillexRation" >
+        <label><h4>herbe</h4></label>
+        <button type="button" (click)="getOperation('-',1,'herbe')" class="operator" value="-">-</button>
+        <input type="text" name="herbe" placeholder="herbe" [ngModel]="herbe" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <button type="button" (click)="getOperation('+',1,'herbe')" class="operator" value="+">+</button>
+      <!-- <input size="3" type="text" name="herbexRation" [ngModel]="herbexRation" > -->
+      <h4>{{herbexRation}}</h4>
       kg
       </div>
       <div class="card-body">
         <label><h4>Maïs</h4></label>
-        <button type="button" (click)="getOperation('+',1,'mais')" class="operator" value="+">+</button>
-        <input type="text" name="mais" placeholder="mais" [ngModel]="mais" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
         <button type="button" (click)="getOperation('-',1,'mais')" class="operator" value="-">-</button>
-      <input size="2" type="text" name="maisxRation" [ngModel]="maisxRation" >
+        <input type="text" name="mais" placeholder="mais" [ngModel]="mais" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
+        <button type="button" (click)="getOperation('+',1,'mais')" class="operator" value="+">+</button>
+      <!-- <input size="2" type="text" name="maisxRation" [ngModel]="maisxRation" > -->
+      <h4>{{maisxRation}}</h4>
       kg
       </div>
-      <div class="card-body">
-      <h4>pelles de minéraux</h4>
-        <input size="1" type="text" name="mineraux" placeholder="mineraux" [ngModel]="mineraux" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-        <!-- <input size="1" type="text" name="minerauxxRation" [ngModel]="minerauxxRation" > -->
-      </div>
-      <div class="card-body">
-      <h4>sac de bicarbonate</h4>
-        <input size="1" type="text" name="bicarbonate" placeholder="bicarbonate" [ngModel]="bicarbonate" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-      <!-- <input size="1" type="text" name="bicarbonatexRation" [ngModel]="bicarbonatexRation" > -->
-      </div>
-      <div class="card-body">
-      <h4>sac de calcium</h4>
-        <input size="1" type="text" name="calcium" placeholder="calcium" [ngModel]="calcium" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-      <!-- <input size="1" type="text" name="calciumxRation" [ngModel]="calciumxRation" > -->
-      </div>
-      <div class="card-body">
-      <h4>sac de sel</h4>
-        <input size="1" type="text" name="sel" placeholder="sel" [ngModel]="sel" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
-      <!-- <input size="1" type="text" name="selxRation" [ngModel]="selxRation" > -->
-      </div>
-      <div class="card-body">
-      <h4>pelles d'urée</h4>
-        <input size="1" type="text" name="urée" placeholder="urée" [ngModel]="uree" onkeypress="return (event.charCode !=8 && event.charCode ==0 || ( event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57)))">
 
       <!-- <input size="1" type="text" name="ureexRation" [ngModel]="ureexRation" > -->
       </div>
@@ -82,16 +90,16 @@
   </div>
   <br>
 
-<!--   <div id='jqxWidget' style="font-size: 13px; font-family: Verdana;">
+  <div id='jqxWidget' style="font-size: 13px; font-family: Verdana;">
     <div style='margin-top: 10px;'>
       {{rations}}
     </div>
     <jqxMaskedInput #numericInput
-                    [mask]="'###'"
+                    [mask]="'###.##'"
                     [width]="250"
                     [height]="25">
     </jqxMaskedInput>
-  </div> -->
+  </div>
 
   <div class="card w-50" style="text-align: center;">
     <jqxChart *ngIf="modified" [width]="400" [height]="250" [title]="''" [description]="charts[0].title"
